Fix header spacing

--- a/src/app/components/header/header.module.sass
+++ b/src/app/components/header/header.module.sass
@@ -2,7 +2,6 @@
     display: flex
     justify-content: space-between
     align-items: center
-    margin-bottom: -3px
 
     .logotype
         display: flex
@@ -41,7 +40,7 @@
             background: #3B3B49
             transition: 0.15s
             position: absolute
-            bottom: 0
+            bottom: -3px
             transform-origin: center
             opacity: 0
 
